--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = John Huh
-	email = me@johnyhuh.com
+	email = johnyhuh@gmail.com
 [core]
 	excludesfile = /Users/jhuh/.gitignore_global
 [difftool "sourcetree"]
