Added long status

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,6 +25,7 @@
   
   # View the current working tree status using the short format
   s = status -s
+  ss = status 
 
   # Switch to a branch, creating it if necessary
   go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
